--- a/src/components/layout/style.module.css
+++ b/src/components/layout/style.module.css
@@ -1,28 +1,22 @@
-body {
-    margin: 0;
-    background: #f8f9f6;
-    font-family: 'Courier New', Courier, monospace;
+.container {
+    padding: 1rem;
+    height: 100vh;
+    position: relative;
 }
-
-a {
-    color: inherit;
-}
-
 
 .projects {
     padding: 1rem;
     margin: 0;
     list-style: none;
     background: white;
+    position: fixed;
+    width: 15rem;
 }
 
 .project {
     margin-bottom: .5rem;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 15rem 1fr;
-    padding: 1rem;
-    grid-gap: 1rem;
+.content {
+    margin-left: 16rem;
 }
