TimoBecker: layout fix

--- a/src/components/Pieces/TimoBecker/style.module.css
+++ b/src/components/Pieces/TimoBecker/style.module.css
@@ -9,8 +9,13 @@
 }
 
 .animation {
+    position: absolute;
     height: 100%;
     width: 100%;
     object-fit: contain;
     object-position: center;
+}
+
+.animationContainer {
+    position: relative;
 }
