--- a/src/components/Pieces/Tiefseemonster/style.module.css
+++ b/src/components/Pieces/Tiefseemonster/style.module.css
@@ -3,3 +3,9 @@
     height: 100%;
     width: 100%;
 }
+
+.kiste {
+    position: absolute;
+    pointer-events: none;
+    transition: all 1s ease;
+}
