--- a/src/components/layout/style.module.css
+++ b/src/components/layout/style.module.css
@@ -52,6 +52,10 @@
     text-decoration: none;
 }
 
+.project_isOpen {
+   font-weight: bold;
+}
+
 .projectLink {
     background: transparent;
     font-family: inherit;
@@ -62,6 +66,7 @@
     text-decoration: inherit;
     color: inherit;
     text-align: left;
+    font-weight: inherit;
 }
 
 .projectLink:focus {
