--- a/src/templates/style.module.css
+++ b/src/templates/style.module.css
@@ -1,7 +1,9 @@
 .container {
     display: flex;
-    justify-content: center;
-    align-items: top;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1rem;
 }
 
 .inner {
@@ -17,4 +19,24 @@
     padding: 0;
     display: flex;
     justify-content: space-between;
+}
+
+.images {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.imageContainer {
+    padding: 1rem 1rem 0;
+    margin: 0;
+    background: white;
+}
+
+.imageContainer:last-child {
+    padding-bottom: 1rem;
+}
+
+.image {
+    width: 100%;
 }
