--- a/src/components/layout/style.module.css
+++ b/src/components/layout/style.module.css
@@ -54,6 +54,7 @@
 
 .project_isOpen {
    font-weight: bold;
+   text-transform: uppercase;
 }
 
 .projectLink {
@@ -67,6 +68,7 @@
     color: inherit;
     text-align: left;
     font-weight: inherit;
+    text-transform: inherit;
 }
 
 .projectLink:focus {
