--- a/src/templates/style.module.css
+++ b/src/templates/style.module.css
@@ -17,10 +17,19 @@
     background: white;
 }
 
+.nextPrevOuter {
+    min-height: 90vh;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+
 .nextPrev {
+    width: 100%;
+    background: white;
     margin: 2rem 0 0;
     list-style: none;
-    padding: 0;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
 }
