mobile: fix scrolling in menu

--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -23,7 +23,6 @@
 
     @media (max-width: @breakPointMobile) {
         right: 1rem;
-        overflow: scroll;
         background: white;
         white-space: nowrap;
         height: 5rem;
@@ -37,6 +36,7 @@
 
 .projects {
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     list-style: none;
     flex: 1 1 auto;
     margin: 0;
