full screen canvas on mobile

--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -165,11 +165,14 @@
     background-repeat: no-repeat;
 
     @media (min-width: @breakPointMobile) {
-        margin-left: @boxWidth + 2rem;
+        margin-left: @boxWidth + 1rem;
     }
 
     @media (max-width: @breakPointMobile) {
-        top: 7rem;
+        top: 4rem;
+        right: 0;
+        left: 0;
+        bottom: 0;
     }
 }
 
