--- a/src/components/Pieces/TimoBecker/style.module.less
+++ b/src/components/Pieces/TimoBecker/style.module.less
@@ -1,3 +1,5 @@
+@import '../../../vars';
+
 .container {
     position: absolute;
     top: 0;
@@ -6,6 +8,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+
+    @media (max-width: @breakPointMobile) {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
 }
 
 .animation {
