--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -60,6 +60,7 @@
         position: absolute;
         top: 0;
         padding-top: 3rem;
+        padding-bottom: 3rem;
         width: 100%;
     }
 }
