--- a/src/templates/project/style.module.less
+++ b/src/templates/project/style.module.less
@@ -35,8 +35,7 @@
     width: 100%;
     margin-top: 1rem;
     display: grid;
-    column-gap: 1rem;
-    row-gap: 1rem;
+    grid-gap: 1rem;
 
     @media (min-width: @breakPointMobile) {
         grid-template-columns: 1fr repeat(2, minmax(20rem, 2fr)) 1fr;
