add spacing bottom optionally

--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -187,6 +187,12 @@
     }
 }
 
+.content__marginBottom {
+    @media (min-width: @breakPointMobile) {
+        margin-bottom: 1rem;
+    }
+}
+
 .canvas {
     position: fixed;
     top: 1rem;
