--- a/src/components/News/style.module.less
+++ b/src/components/News/style.module.less
@@ -1,4 +1,20 @@
 .newsLink {
-    max-width: 400px;
     display: block;
+    padding: 1rem;
+    background: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.container {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
