news: add background image

--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -219,3 +219,14 @@
 .canvas__grayscale {
     filter: saturate(0);
 }
+
+.backgroundImage {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    z-index: -2;
+}
