layout: highlight if news is active

--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -126,9 +126,11 @@
     display: inline;
 }
 
-.project_isActive .projectLink {
-    background-position: 0px 0.95em;
-    background-size: 100% .1em;
+.project_isActive, .project_isOpen {
+     .projectLink {
+        background-position: 0px 0.95em;
+        background-size: 100% .1em;
+    }
 }
 
 .projectMoreLink {
