news: fix images

--- a/src/components/News/style.module.less
+++ b/src/components/News/style.module.less
@@ -18,3 +18,9 @@
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
+
+.image {
+    img {
+        object-fit: cover;
+    }
+}
