--- a/src/components/Pieces/Schnappenburg/style.module.css
+++ b/src/components/Pieces/Schnappenburg/style.module.css
@@ -9,11 +9,18 @@
     position: absolute;
     height: 100%;
     top: 0;
+    left: 0;
     width: 100%;
     background: url("./k.svg");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+@media (max-aspect-ratio: 1/1) {
+    .k {
+        background-size: cover;
+    }
 }
 
 .s {
@@ -40,7 +47,7 @@
 }
 
 .sLeft, .sRight {
-    width: 10%;
+    width: 7rem;
     background-repeat: no-repeat;
 }
 
