--- a/src/templates/project/style.module.less
+++ b/src/templates/project/style.module.less
@@ -115,6 +115,21 @@
     }
 }
 
+.vimeoContainer {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56%;
+
+    iframe {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+    }
+}
+
 .image {
     width: 100%;
     display: block;
