mobile layout: projects without fancy background less margin top

--- a/src/components/layout/style.module.less
+++ b/src/components/layout/style.module.less
@@ -194,7 +194,10 @@
 
     @media (max-width: @breakPointMobile) {
         top: 5rem;
-        margin-top: 50vh;
+
+        &.content__hasPiece {
+            margin-top: 60vh;
+        }
     }
 }
 
