--- a/src/components/OverviewList/style.module.less
+++ b/src/components/OverviewList/style.module.less
@@ -17,10 +17,19 @@
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    margin-bottom: 1rem;
 }
 
 .image {
     img {
         object-fit: cover;
     }
+}
+
+.titleContainer {
+    padding: 1rem 1rem 0;
+}
+
+.title {
+    margin: 0;
 }
