--- a/src/components/OverviewList/style.module.less
+++ b/src/components/OverviewList/style.module.less
@@ -18,6 +18,7 @@
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     margin-bottom: 1rem;
+    pointer-events: all;
 }
 
 .image {
