--- a/src/templates/project/style.module.less
+++ b/src/templates/project/style.module.less
@@ -23,6 +23,7 @@
 .inner {
     padding: 1rem;
     background: white;
+    pointer-events: all;
 }
 
 .header {
@@ -53,6 +54,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    pointer-events: all;
 
     &:hover {
         text-decoration: underline;
@@ -97,6 +99,7 @@
     margin: 0;
     list-style: none;
     align-self: stretch;
+    pointer-events: all;
 }
 
 .imageContainer {
