fix some conflicts between the pieces

--- a/src/components/Pieces/FuchsUndWald/style.module.css
+++ b/src/components/Pieces/FuchsUndWald/style.module.css
@@ -11,6 +11,7 @@
     animation-duration: .3s;
     animation-fill-mode: forwards;
     position: absolute;
+    top: 0;
     width: 100%;
     opacity: 0;
 }
